--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       # - image: circleci/postgres:9.4
 
     #working_directory: ~/repo
-    working_directory: /tmp
+    working_directory: /tmp/work
 
     environment:
       # Customize the JVM maximum heap limit
