--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,6 @@ war {
     archiveName = "myapp.war"
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.10.1'
-}
+//task wrapper(type: Wrapper) {
+//    gradleVersion = '4.10.1'
+//}
